<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CekintentActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="24dip"
        android:gravity="center_horizontal"
        android:textColor="@color/Utama"
        android:textStyle="bold"
        android:layout_marginTop="13dip"
        android:text="@string/radio_judul" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dip"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_margin="13dip"
        android:text="@string/check_intro_radio" />

    <RadioGroup
        android:id="@+id/rgSmartphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/radio_1" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/radio_2" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/radio_3" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:minHeight="48dp"
            android:text="@string/radio_4" />

        <Button
            android:id="@+id/btnradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:layout_margin="10dip"
            android:textColor="@color/white"
            android:text="@string/btn_submit" />
    </RadioGroup>

</LinearLayout>