<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcBMI"
    >
    <TextView
        android:id="@+id/title_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:layout_marginBottom="30dip"
        android:gravity="center_horizontal"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:textSize="30dip"
        android:fontFamily="cursive"
        android:text="@string/BMI_judul"

        />
    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dip"
        android:layout_marginBottom="5dip"
        android:text="@string/berat"


        />
    <EditText
        android:id="@+id/Berat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@color/grey"
        android:textColor="@color/black"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="15dip"
        android:hint="Masukan Berat Badan (Kg)"


        />
    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dip"
        android:layout_marginBottom="5dip"
        android:text="@string/tinggi"

        />
    <EditText
        android:id="@+id/Tinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@color/grey"
        android:textColor="@color/black"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="15dip"
        android:hint="Masukan Tinggi Badan (M)"


        />
    <Button
        android:id="@+id/btnHitungBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        android:text="@string/BMI_judul"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:layout_margin="20dip"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dip"
            android:textStyle="bold"
            android:text="Hasil Perhitungan BMI :"
            android:layout_marginRight="20dip"
            />
        <TextView
            android:id="@+id/tvAngkaBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="30dip"
            android:textColor="@color/teal_700"
            android:text="0"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:layout_margin="20dip"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dip"
            android:textStyle="bold"
            android:layout_marginRight="45dip"
            android:text="@string/keterangan"
            />
        <TextView
            android:id="@+id/tvHasilBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="30dip"
            android:textColor="@color/teal_700"
            android:text="-"
            />


    </LinearLayout>


</LinearLayout>